fixed issue where high octane would not play on safari browser

--- a/node-server-aws/aws-react/src/App.css
+++ b/node-server-aws/aws-react/src/App.css
@@ -3,43 +3,41 @@
 }
 
 .header_area{
-  height: 100px;
+  height: 10vh;
   width: 100%;
-  height: 100px;
   background-color: #601294;
   /*border-bottom-left-radius: 1rem;
   border-bottom-right-radius:1rem;*/
 }
 
 .smaller_header_area{
-  height: 50px;
+  height: 5vh;
   background-color: #9c4fcf;
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius:1rem;
+  border-bottom-left-radius: 5rem;
+  border-bottom-right-radius:5rem;
 }
 
 .bottom-container{
-  position: fixed;
+  position: sticky;
   width: 100%;
   bottom: 0;
 }
 
 .smaller_footer_area{
-  height: 50px;
+  height: 5vh;
   background-color: #9c4fcf;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
+  border-top-left-radius: 5rem;
+  border-top-right-radius: 5rem;
 }
 
 .footer_area{
   text-align: center;
-  height: 100px;
-  height: 100px;
+  height: 10vh;
   background-color: #601294;
 }
 .footer_area > p{
   margin-top: auto;
-  padding-top: 40px;
+  padding-top: 5vh;
   color: black;
 }
 .container {
@@ -79,6 +77,7 @@ h1{
   margin: 3%;
   border-bottom: solid;
   border-bottom: #9c4fcf;
+  border-bottom-width: 2px;
 }
 
 .errmsg{
